--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
